Make scans targeted and easier to share